<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>hydraharp_mainWindow</class>
 <widget class="QMainWindow" name="hydraharp_mainWindow">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>965</width>
    <height>513</height>
   </rect>
  </property>
  <property name="acceptDrops">
   <bool>false</bool>
  </property>
  <property name="windowTitle">
   <string>Simple XY Scan</string>
  </property>
  <widget class="QWidget" name="centralwidget">
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
     <widget class="QGroupBox" name="hydraharp_modules">
      <property name="maximumSize">
       <size>
        <width>16777215</width>
        <height>380</height>
       </size>
      </property>
      <property name="title">
       <string>Controls</string>
      </property>
      <property name="flat">
       <bool>true</bool>
      </property>
      <property name="checkable">
       <bool>false</bool>
      </property>
      <property name="checked">
       <bool>false</bool>
      </property>
      <layout class="QHBoxLayout" name="horizontalLayout">
       <item>
        <layout class="QVBoxLayout" name="control">
         <item>
          <widget class="QGroupBox" name="Connection_groupBox">
           <property name="maximumSize">
            <size>
             <width>16777215</width>
             <height>16777215</height>
            </size>
           </property>
           <property name="title">
            <string>Device Connection Parameters</string>
           </property>
           <layout class="QGridLayout" name="gridLayout" columnstretch="0,0,0">
            <item row="3" column="2">
             <widget class="QComboBox" name="Mode_comboBox"/>
            </item>
            <item row="4" column="2">
             <widget class="QComboBox" name="RefSource_comboBox"/>
            </item>
            <item row="3" column="1">
             <widget class="QLabel" name="label">
              <property name="text">
               <string>Mode:</string>
              </property>
              <property name="alignment">
               <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
              </property>
             </widget>
            </item>
            <item row="1" column="2">
             <widget class="QDoubleSpinBox" name="DeviceIndex_doubleSpinBox">
              <property name="decimals">
               <number>0</number>
              </property>
             </widget>
            </item>
            <item row="1" column="1">
             <widget class="QLabel" name="Mode_label">
              <property name="text">
               <string>DeviceIndex:</string>
              </property>
              <property name="alignment">
               <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
              </property>
             </widget>
            </item>
            <item row="4" column="1">
             <widget class="QLabel" name="label_2">
              <property name="text">
               <string>RefSource:</string>
              </property>
              <property name="alignment">
               <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
              </property>
             </widget>
            </item>
            <item row="0" column="1" colspan="2">
             <widget class="QCheckBox" name="connected_checkBox">
              <property name="text">
               <string>connected</string>
              </property>
             </widget>
            </item>
           </layout>
          </widget>
         </item>
         <item>
          <widget class="QGroupBox" name="Aquisition_GroupBox">
           <property name="maximumSize">
            <size>
             <width>16777215</width>
             <height>16777215</height>
            </size>
           </property>
           <property name="title">
            <string>Histogram Acquisition Settings</string>
           </property>
           <layout class="QGridLayout" name="gridLayout_3">
            <item row="6" column="1">
             <widget class="QDoubleSpinBox" name="Resolution_doubleSpinBox">
              <property name="readOnly">
               <bool>true</bool>
              </property>
             </widget>
            </item>
            <item row="3" column="0">
             <widget class="QLabel" name="label_4">
              <property name="text">
               <string>HistogramChannels:</string>
              </property>
             </widget>
            </item>
            <item row="6" column="0">
             <widget class="QLabel" name="label_6">
              <property name="text">
               <string>Resolution:</string>
              </property>
             </widget>
            </item>
            <item row="3" column="1">
             <widget class="QDoubleSpinBox" name="HistogramChannels_doubleSpinBox">
              <property name="decimals">
               <number>0</number>
              </property>
              <property name="maximum">
               <double>100000000.000000000000000</double>
              </property>
             </widget>
            </item>
            <item row="8" column="0">
             <widget class="QLabel" name="label_19">
              <property name="text">
               <string>StopCount</string>
              </property>
             </widget>
            </item>
            <item row="8" column="1">
             <widget class="QDoubleSpinBox" name="StopCount_doubleSpinBox"/>
            </item>
            <item row="5" column="0">
             <widget class="QLabel" name="label_20">
              <property name="text">
               <string>Binnning:</string>
              </property>
             </widget>
            </item>
            <item row="7" column="1">
             <widget class="QCheckBox" name="StopOnOverflow_checkBox">
              <property name="text">
               <string>StopOnOverflow</string>
              </property>
             </widget>
            </item>
            <item row="2" column="0">
             <widget class="QLabel" name="label_5">
              <property name="text">
               <string>Tacq:</string>
              </property>
             </widget>
            </item>
            <item row="7" column="0">
             <widget class="QLabel" name="label_3">
              <property name="text">
               <string>StopOnOverOverflow</string>
              </property>
             </widget>
            </item>
            <item row="5" column="1">
             <widget class="QComboBox" name="Binning_comboBox"/>
            </item>
            <item row="2" column="1">
             <widget class="QDoubleSpinBox" name="Tacq_doubleSpinBox">
              <property name="suffix">
               <string> sec</string>
              </property>
              <property name="decimals">
               <number>3</number>
              </property>
              <property name="maximum">
               <double>40000.000000000000000</double>
              </property>
             </widget>
            </item>
           </layout>
          </widget>
         </item>
        </layout>
       </item>
       <item>
        <layout class="QVBoxLayout" name="sync">
         <item>
          <widget class="QGroupBox" name="Sync_GroupBox">
           <property name="enabled">
            <bool>true</bool>
           </property>
           <property name="sizePolicy">
            <sizepolicy hsizetype="Preferred" vsizetype="Minimum">
             <horstretch>0</horstretch>
             <verstretch>0</verstretch>
            </sizepolicy>
           </property>
           <property name="minimumSize">
            <size>
             <width>0</width>
             <height>320</height>
            </size>
           </property>
           <property name="maximumSize">
            <size>
             <width>16777215</width>
             <height>16777215</height>
            </size>
           </property>
           <property name="title">
            <string>Sync Channel</string>
           </property>
           <layout class="QGridLayout" name="gridLayout_4">
            <item row="5" column="0">
             <widget class="QLabel" name="label_12">
              <property name="text">
               <string>SyncPeriod</string>
              </property>
             </widget>
            </item>
            <item row="5" column="1">
             <widget class="QDoubleSpinBox" name="SyncPeriod_doubleSpinBox"/>
            </item>
            <item row="4" column="0">
             <widget class="QLabel" name="label_11">
              <property name="text">
               <string>SyncRate</string>
              </property>
             </widget>
            </item>
            <item row="3" column="0">
             <widget class="QLabel" name="label_10">
              <property name="text">
               <string>CFDZeroCrossSync</string>
              </property>
             </widget>
            </item>
            <item row="4" column="1">
             <widget class="QDoubleSpinBox" name="SyncRate_doubleSpinBox"/>
            </item>
            <item row="6" column="0" colspan="2">
             <widget class="QLCDNumber" name="SyncRate_lcdNumber">
              <property name="minimumSize">
               <size>
                <width>0</width>
                <height>40</height>
               </size>
              </property>
              <property name="maximumSize">
               <size>
                <width>16777215</width>
                <height>60</height>
               </size>
              </property>
              <property name="digitCount">
               <number>12</number>
              </property>
             </widget>
            </item>
            <item row="1" column="1">
             <widget class="QDoubleSpinBox" name="SyncOffset_doubleSpinBox"/>
            </item>
            <item row="3" column="1">
             <widget class="QDoubleSpinBox" name="CFDZeroCrossSync_doubleSpinBox"/>
            </item>
            <item row="2" column="1">
             <widget class="QDoubleSpinBox" name="CFDLevelSync_doubleSpinBox"/>
            </item>
            <item row="2" column="0">
             <widget class="QLabel" name="label_9">
              <property name="text">
               <string>CFDLevelSync</string>
              </property>
             </widget>
            </item>
            <item row="1" column="0">
             <widget class="QLabel" name="label_7">
              <property name="text">
               <string>SyncOffset</string>
              </property>
             </widget>
            </item>
            <item row="0" column="0">
             <widget class="QLabel" name="label_8">
              <property name="text">
               <string>SyncDivider</string>
              </property>
             </widget>
            </item>
            <item row="0" column="1">
             <widget class="QComboBox" name="SyncDivider_comboBox">
              <property name="enabled">
               <bool>true</bool>
              </property>
             </widget>
            </item>
           </layout>
          </widget>
         </item>
        </layout>
       </item>
       <item>
        <layout class="QVBoxLayout" name="timing0">
         <item>
          <widget class="QGroupBox" name="Channel0_GroupBox">
           <property name="enabled">
            <bool>true</bool>
           </property>
           <property name="minimumSize">
            <size>
             <width>0</width>
             <height>0</height>
            </size>
           </property>
           <property name="maximumSize">
            <size>
             <width>16777215</width>
             <height>16777215</height>
            </size>
           </property>
           <property name="title">
            <string>Channel 0</string>
           </property>
           <layout class="QGridLayout" name="gridLayout_5">
            <property name="verticalSpacing">
             <number>3</number>
            </property>
            <item row="1" column="1">
             <widget class="QDoubleSpinBox" name="CFDLevel0_doubleSpinBox"/>
            </item>
            <item row="1" column="0">
             <widget class="QLabel" name="label_13">
              <property name="text">
               <string>CFDLevel</string>
              </property>
             </widget>
            </item>
            <item row="4" column="0">
             <widget class="QLabel" name="label_15">
              <property name="text">
               <string>ChanOffset</string>
              </property>
             </widget>
            </item>
            <item row="3" column="1">
             <widget class="QDoubleSpinBox" name="CFDZeroCross0_doubleSpinBox"/>
            </item>
            <item row="4" column="1">
             <widget class="QDoubleSpinBox" name="ChanOffset0_doubleSpinBox"/>
            </item>
            <item row="5" column="0" colspan="2">
             <widget class="QLCDNumber" name="CountRate0_lcdNumber">
              <property name="sizePolicy">
               <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
                <horstretch>0</horstretch>
                <verstretch>0</verstretch>
               </sizepolicy>
              </property>
              <property name="minimumSize">
               <size>
                <width>0</width>
                <height>30</height>
               </size>
              </property>
              <property name="maximumSize">
               <size>
                <width>16777215</width>
                <height>30</height>
               </size>
              </property>
              <property name="digitCount">
               <number>12</number>
              </property>
             </widget>
            </item>
            <item row="3" column="0">
             <widget class="QLabel" name="label_14">
              <property name="text">
               <string>CFDZeroCross</string>
              </property>
             </widget>
            </item>
            <item row="0" column="0">
             <widget class="QCheckBox" name="ChanEnable0_checkBox">
              <property name="text">
               <string>Enabled</string>
              </property>
             </widget>
            </item>
           </layout>
          </widget>
         </item>
         <item>
          <widget class="QGroupBox" name="Channel1_GroupBox">
           <property name="enabled">
            <bool>true</bool>
           </property>
           <property name="maximumSize">
            <size>
             <width>16777215</width>
             <height>180</height>
            </size>
           </property>
           <property name="title">
            <string>Channel 1</string>
           </property>
           <layout class="QGridLayout" name="gridLayout_6">
            <item row="2" column="1">
             <widget class="QDoubleSpinBox" name="CFDZeroCross1_doubleSpinBox"/>
            </item>
            <item row="2" column="0">
             <widget class="QLabel" name="label_17">
              <property name="text">
               <string>CFDZeroCross</string>
              </property>
             </widget>
            </item>
            <item row="3" column="0">
             <widget class="QLabel" name="label_18">
              <property name="text">
               <string>ChanOffset</string>
              </property>
             </widget>
            </item>
            <item row="3" column="1">
             <widget class="QDoubleSpinBox" name="ChanOffset1_doubleSpinBox"/>
            </item>
            <item row="1" column="0">
             <widget class="QLabel" name="label_16">
              <property name="text">
               <string>CFDLevel</string>
              </property>
             </widget>
            </item>
            <item row="1" column="1">
             <widget class="QDoubleSpinBox" name="CFDLevel1_doubleSpinBox"/>
            </item>
            <item row="4" column="0" colspan="2">
             <widget class="QLCDNumber" name="CountRate1_lcdNumber">
              <property name="sizePolicy">
               <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
                <horstretch>0</horstretch>
                <verstretch>0</verstretch>
               </sizepolicy>
              </property>
              <property name="minimumSize">
               <size>
                <width>0</width>
                <height>30</height>
               </size>
              </property>
              <property name="maximumSize">
               <size>
                <width>16777215</width>
                <height>30</height>
               </size>
              </property>
              <property name="digitCount">
               <number>12</number>
              </property>
             </widget>
            </item>
            <item row="0" column="0">
             <widget class="QCheckBox" name="ChanEnable1_checkBox">
              <property name="text">
               <string>Enabled</string>
              </property>
             </widget>
            </item>
           </layout>
          </widget>
         </item>
        </layout>
       </item>
      </layout>
     </widget>
    </item>
    <item>
     <widget class="QGroupBox" name="channel_optimizer_GroupBox">
      <property name="title">
       <string>Channel Optimizer</string>
      </property>
      <property name="alignment">
       <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
      </property>
      <property name="flat">
       <bool>true</bool>
      </property>
      <property name="checkable">
       <bool>false</bool>
      </property>
      <layout class="QVBoxLayout" name="verticalLayout_5">
       <item>
        <widget class="QFrame" name="optimizer_settings">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Preferred" vsizetype="Maximum">
           <horstretch>0</horstretch>
           <verstretch>0</verstretch>
          </sizepolicy>
         </property>
         <property name="maximumSize">
          <size>
           <width>16777215</width>
           <height>60</height>
          </size>
         </property>
         <property name="sizeIncrement">
          <size>
           <width>0</width>
           <height>1</height>
          </size>
         </property>
         <layout class="QGridLayout" name="settings">
          <item row="0" column="0">
           <widget class="QCheckBox" name="run_checkBox">
            <property name="text">
             <string>run</string>
            </property>
           </widget>
          </item>
          <item row="1" column="0">
           <widget class="QDoubleSpinBox" name="history_len_doubleSpinBox">
            <property name="prefix">
             <string>history len: </string>
            </property>
            <property name="decimals">
             <number>0</number>
            </property>
           </widget>
          </item>
          <item row="0" column="1">
           <widget class="QCheckBox" name="sync_visible_checkBox">
            <property name="text">
             <string>show sync channel</string>
            </property>
           </widget>
          </item>
          <item row="0" column="2">
           <widget class="QCheckBox" name="c0_visible_checkBox">
            <property name="text">
             <string>show channel 0</string>
            </property>
           </widget>
          </item>
          <item row="1" column="2">
           <widget class="QCheckBox" name="c1_visible_checkBox">
            <property name="text">
             <string>show channel 1</string>
            </property>
           </widget>
          </item>
         </layout>
        </widget>
       </item>
      </layout>
     </widget>
    </item>
   </layout>
  </widget>
  <widget class="QMenuBar" name="menubar">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>965</width>
     <height>21</height>
    </rect>
   </property>
  </widget>
  <widget class="QStatusBar" name="statusbar">
   <property name="minimumSize">
    <size>
     <width>0</width>
     <height>0</height>
    </size>
   </property>
   <property name="autoFillBackground">
    <bool>false</bool>
   </property>
   <property name="sizeGripEnabled">
    <bool>true</bool>
   </property>
  </widget>
 </widget>
 <resources/>
 <connections>
  <connection>
   <sender>connected_checkBox</sender>
   <signal>toggled(bool)</signal>
   <receiver>Sync_GroupBox</receiver>
   <slot>setEnabled(bool)</slot>
   <hints>
    <hint type="sourcelabel">
     <x>149</x>
     <y>87</y>
    </hint>
    <hint type="destinationlabel">
     <x>374</x>
     <y>59</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>connected_checkBox</sender>
   <signal>toggled(bool)</signal>
   <receiver>Channel0_GroupBox</receiver>
   <slot>setEnabled(bool)</slot>
   <hints>
    <hint type="sourcelabel">
     <x>113</x>
     <y>87</y>
    </hint>
    <hint type="destinationlabel">
     <x>752</x>
     <y>57</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>connected_checkBox</sender>
   <signal>toggled(bool)</signal>
   <receiver>Channel1_GroupBox</receiver>
   <slot>setEnabled(bool)</slot>
   <hints>
    <hint type="sourcelabel">
     <x>217</x>
     <y>84</y>
    </hint>
    <hint type="destinationlabel">
     <x>849</x>
     <y>228</y>
    </hint>
   </hints>
  </connection>
 </connections>
</ui>
